--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -31,14 +31,14 @@
         android:id="@+id/btn_to_main_menu"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp"
         android:backgroundTint="@color/btn_color_default"
         android:text="В меню"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:cornerRadius="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/about" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
