--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -11,17 +11,17 @@
         android:id="@+id/btn_to_main_menu2"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="15dp"
         android:backgroundTint="@color/btn_color_default"
         android:text="В меню"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:cornerRadius="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_finish" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/text_finish"
