--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -8,39 +8,107 @@
     tools:context=".StatsActivity">
 
     <TextView
-        android:id="@+id/stats"
-        android:layout_width="240dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="52dp"
+        android:id="@+id/stats_header"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
         android:background="@color/bg"
-        android:backgroundTint="@color/bg"
-        android:fontFamily="sans-serif"
-        android:lineSpacingExtra="4sp"
+        android:letterSpacing="0.03"
+        android:minHeight="40dp"
         android:padding="5dp"
-        android:text="@string/stats_correct_answers"
-        android:textAlignment="viewStart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="16sp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.126"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Ваша статистика" />
+
+    <TextView
+        android:id="@+id/question_asked_all_time"
+        android:layout_width="138dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:background="@color/bg"
+        android:letterSpacing="0.03"
+        android:minHeight="60dp"
+        android:padding="5dp"
+        android:textAlignment="viewEnd"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/question_text_view3"
+        app:layout_constraintTop_toBottomOf="@+id/stats_header"
+        tools:text="Вопросов" />
 
     <TextView
         android:id="@+id/correct_answers_qty_text_view"
-        android:layout_width="120dp"
-        android:layout_height="27dp"
-        android:gravity="top"
+        android:layout_width="138dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        android:background="@color/bg"
         android:letterSpacing="0.03"
-        android:padding="0dp"
-        android:textAlignment="center"
+        android:minHeight="60dp"
+        android:padding="5dp"
+        android:textAlignment="viewEnd"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.945"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/question_text_view4"
+        app:layout_constraintTop_toBottomOf="@+id/question_asked_all_time"
+        tools:text="Ответов" />
+
+    <TextView
+        android:id="@+id/all_time_description"
+        android:layout_width="211dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/bg"
+        android:letterSpacing="0.03"
+        android:minHeight="60dp"
+        android:padding="5dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="71dp"
-        tools:text="test" />
+        app:layout_constraintTop_toBottomOf="@+id/stats_header"
+        tools:text="Всего задано вопросов:" />
+
+    <TextView
+        android:id="@+id/right_questions_description"
+        android:layout_width="213dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/bg"
+        android:letterSpacing="0.03"
+        android:minHeight="60dp"
+        android:padding="5dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/all_time_description"
+        tools:text="Дано правильных ответов:" />
 
     <Button
         android:id="@+id/btn_to_main_menu"
