add all questions in DB, change markup

--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -33,14 +33,14 @@
         android:layout_width="138dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="15dp"
         android:background="@color/bg"
+        android:gravity="center_vertical|end"
         android:letterSpacing="0.03"
         android:minHeight="60dp"
         android:padding="5dp"
-        android:textAlignment="viewEnd"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stats_header"
@@ -51,14 +51,14 @@
         android:layout_width="138dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="15dp"
         android:background="@color/bg"
+        android:gravity="center_vertical|end"
         android:letterSpacing="0.03"
         android:minHeight="60dp"
         android:padding="5dp"
-        android:textAlignment="viewEnd"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/question_asked_all_time"
@@ -68,15 +68,15 @@
         android:id="@+id/all_time_description"
         android:layout_width="211dp"
         android:layout_height="0dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:background="@color/bg"
+        android:gravity="center_vertical"
         android:letterSpacing="0.03"
         android:minHeight="60dp"
         android:padding="5dp"
-        android:textAlignment="viewStart"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -88,21 +88,59 @@
         android:id="@+id/right_questions_description"
         android:layout_width="213dp"
         android:layout_height="0dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:background="@color/bg"
+        android:gravity="center_vertical"
         android:letterSpacing="0.03"
         android:minHeight="60dp"
         android:padding="5dp"
-        android:textAlignment="viewStart"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/all_time_description"
         tools:text="Дано правильных ответов:" />
+
+    <TextView
+        android:id="@+id/total_questions_in_db_description"
+        android:layout_width="213dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/bg"
+        android:gravity="center_vertical"
+        android:letterSpacing="0.03"
+        android:minHeight="60dp"
+        android:padding="5dp"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/right_questions_description"
+        tools:text="Всего вопросов в базе:" />
+
+    <TextView
+        android:id="@+id/total_questions_in_db"
+        android:layout_width="138dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="15dp"
+        android:background="@color/bg"
+        android:gravity="center_vertical|end"
+        android:letterSpacing="0.03"
+        android:minHeight="60dp"
+        android:padding="5dp"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/correct_answers_qty_text_view"
+        tools:text="Вопросов в БД" />
 
     <Button
         android:id="@+id/btn_to_main_menu"
