--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="30dp"
         android:background="@color/bg"
-        android:gravity="left"
+        android:gravity="center_horizontal"
         android:letterSpacing="0.03"
         android:minHeight="60dp"
         android:padding="5dp"
@@ -137,6 +137,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/next_button"
         tools:text="@string/q_1_explanation" />
+
+    <TextView
+        android:id="@+id/success_or_not_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="100dp"
+        android:gravity="center_horizontal"
+        android:letterSpacing="0.03"
+        android:padding="7dp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/explanation_text_view"
+        tools:text="@string/toast_correct" />
 
     <TextView
         android:id="@+id/question_asked_quantity"
